Burger and Frontend Additions

--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-<html><body>Static Body</body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <title>Data Structures Learning</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+</head>
+
+<body>
+  <div id="app">
+    <section class="hero is-halfheight is-light">
+      <div id = "context" class="content px-2 py-2">
+        <div class="is-pulled-left">
+          <h2 id="title" class="title">Data Structures
+        </div>
+        <div class="is-pulled-right">
+          <nav class="navbar is-transparent is-spaced" role="navigation" aria-label="main navigation">
+            <div class="container">
+              <div class="navbar-brand">
+                <a class="navbar-item" href="rent.html"></a>
+                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+                  data-target="navbarTopMain">
+                  <span aria-hidden="true"></span>
+                  <span aria-hidden="true"></span>
+                  <span aria-hidden="true"></span>
+                </a>
+              </div>
+              <div class="navbar-menu" id="navbarTopMain">
+                <div class="navbar-end">
+                  <a href="modules.html" class="navbar-item is-size-6 has-text-weight-semibold">Modules</a>
+                  <a href="aboutUs.html" class="navbar-item is-size-6 has-text-weight-semibold">About Us</a>
+                  <a href="contactUs.html" class="navbar-item is-size-6 has-text-weight-semibold">Contact Us</a>
+                </div>
+              </div>
+            </div>
+          </nav>
+        </div>
+        </h1>
+      </div>
+    </section>
+  </div>
+  <script src="script.js" type="text/javascript" defer></script>
+</body>
+
+</html>
