--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title>Data Structures Learning</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
   <div id="app">
-    <section class="hero is-halfheight is-light">
-      <div id = "context" class="content px-2 py-2">
-        <div class="is-pulled-left">
-          <h2 id="title" class="title">Data Structures
+    <section class="hero is-fullheight is-light">
+      <div id="content" class="content px-2 py-2">
+        <div id="titleText" class="is-pulled-left">
+          <h3 class="has-text-centered">Data Structures</h3>
         </div>
         <div class="is-pulled-right">
           <nav class="navbar is-transparent is-spaced" role="navigation" aria-label="main navigation">
             <div class="container">
               <div class="navbar-brand">
-                <a class="navbar-item" href="rent.html"></a>
+                <div class="navbar-item"></div>
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
                   data-target="navbarTopMain">
                   <span aria-hidden="true"></span>
@@ -39,7 +39,6 @@
             </div>
           </nav>
         </div>
-        </h1>
       </div>
     </section>
   </div>
