--- a/index.html
+++ b/index.html
@@ -11,37 +11,188 @@
 </head>
 
 <body>
-  <div id="app">
-    <section class="hero is-fullheight is-light">
-      <div id="content" class="content px-2 py-2">
-        <div id="titleText" class="is-pulled-left">
-          <h3 class="has-text-centered">Data Structures</h3>
-        </div>
-        <div class="is-pulled-right">
-          <nav class="navbar is-transparent is-spaced" role="navigation" aria-label="main navigation">
-            <div class="container">
-              <div class="navbar-brand">
-                <div class="navbar-item"></div>
-                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
-                  data-target="navbarTopMain">
-                  <span aria-hidden="true"></span>
-                  <span aria-hidden="true"></span>
-                  <span aria-hidden="true"></span>
-                </a>
-              </div>
-              <div class="navbar-menu" id="navbarTopMain">
-                <div class="navbar-end">
-                  <a href="modules.html" class="navbar-item is-size-6 has-text-weight-semibold">Modules</a>
-                  <a href="aboutUs.html" class="navbar-item is-size-6 has-text-weight-semibold">About Us</a>
-                  <a href="contactUs.html" class="navbar-item is-size-6 has-text-weight-semibold">Contact Us</a>
-                </div>
+  <section class="hero is-small is-light">
+    <div id="content" class="content">
+      <div id="titleText" class="column is-1 is-pulled-left">
+        <h3 href="index.html" class="has-text-centered">Data Structures</h3>
+      </div>
+      <div class="is-pulled-right">
+        <nav class="navbar is-transparent is-spaced" role="navigation" aria-label="main navigation">
+          <div class="container">
+            <div class="navbar-brand">
+              <div class="navbar-item"></div>
+              <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+                data-target="navbarTopMain">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+              </a>
+            </div>
+            <div class="navbar-menu" id="navbarTopMain">
+              <div class="navbar-end">
+                <a href="index.html" class="navbar-item is-size-6 has-text-weight-semibold">Modules</a>
+                <a href="aboutus.html" class="navbar-item is-size-6 has-text-weight-semibold">About Us</a>
+                <a href="contactus.html" class="navbar-item is-size-6 has-text-weight-semibold">Contact Us</a>
               </div>
             </div>
-          </nav>
+          </div>
+        </nav>
+      </div>
+    </div>
+  </section>
+  <section class="content-body">
+    <div class="columns is-centered is-variable is-2">
+      <div class="column is-one-quarter">
+        <div class="card">
+          <div class="card-image">
+            <figure class="image">
+              <img src="Images/Index Images/Arrays.jpg" alt="Placeholder image">
+            </figure>
+          </div>
+          <div class="card-content">
+            <div class="content">
+              <p class="title is-4">Arrays</p>
+            </div>
+          </div>
+          <a href="Modules/Arrays/arrays01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
         </div>
       </div>
-    </section>
-  </div>
+
+      <div class="column is-one-quarter">
+        <div class="card">
+          <div class="card-image">
+            <figure class="image">
+              <img src="Images/Index Images/Lists.jpg" alt="Placeholder image">
+            </figure>
+          </div>
+          <div class="card-content">
+            <div class="content">
+              <p class="title is-4">Lists</p>
+            </div>
+          </div>
+          <a href="lists01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
+        </div>
+      </div>
+
+      <div class="column is-one-quarter">
+        <div class="card">
+          <div class="card-image">
+            <figure class="image">
+              <img src="Images/Index Images/ArrayLists.jpg" alt="Placeholder image">
+            </figure>
+          </div>
+          <div class="card-content">
+            <div class="content">
+              <p class="title is-4">ArrayLists</p>
+            </div>
+          </div>
+          <a href="arraylists01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
+        </div>
+      </div>
+    </div>
+    <div class="columns is-centered is-variable is-2">
+      <div class="column is-one-quarter">
+        <div class="card">
+          <div class="card-image">
+            <figure class="image">
+              <img src="Images/Index Images/LinkedLists.jpg" alt="Placeholder image">
+            </figure>
+          </div>
+          <div class="card-content">
+            <div class="content">
+              <p class="title is-4">Linked Lists</p>
+            </div>
+          </div>
+          <a href="linkedlists01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
+        </div>
+      </div>
+
+      <div class="column is-one-quarter">
+        <div class="card">
+          <div class="card-image">
+            <figure class="image">
+              <img src="Images/Index Images/HashSets.jpg" alt="Placeholder image">
+            </figure>
+          </div>
+          <div class="card-content">
+            <div class="content">
+              <p class="title is-4">Hashsets</p>
+            </div>
+          </div>
+          <a href="hashsets01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
+        </div>
+      </div>
+
+      <div class="column is-one-quarter">
+        <div class="card">
+          <div class="card-image">
+            <figure class="image">
+              <img src="Images/Index Images/HashMaps.jpg" alt="Placeholder image">
+            </figure>
+          </div>
+          <div class="card-content">
+            <div class="content">
+              <p class="title is-4">Hashmaps</p>
+            </div>
+          </div>
+          <a href="hashmaps01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="columns is-centered is-variable is-2">
+      <div class="column is-one-quarter">
+        <div class="card">
+          <div class="card-image">
+            <figure class="image">
+              <img src="Images/Index Images/Queues.jpg" alt="Placeholder image">
+            </figure>
+          </div>
+          <div class="card-content">
+            <div class="content">
+              <p class="title is-4">Queues</p>
+            </div>
+          </div>
+          <a href="queues01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
+        </div>
+      </div>
+
+      <div class="column is-one-quarter">
+        <div class="card">
+          <div class="card-image">
+            <figure class="image">
+              <img src="Images/Index Images/Stacks.jpg" alt="Placeholder image">
+            </figure>
+          </div>
+          <div class="card-content">
+            <div class="content">
+              <p class="title is-4">Stacks</p>
+            </div>
+          </div>
+          <a href="stacks01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
+        </div>
+      </div>
+
+      <div class="column is-one-quarter">
+        <div class="card">
+          <div class="card-image">
+            <figure class="image">
+              <img src="Images/Index Images/Trees.jpg" alt="Placeholder image">
+            </figure>
+          </div>
+          <div class="card-content">
+            <div class="content">
+              <p class="title is-4">Trees</p>
+            </div>
+          </div>
+          <a href="trees01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
   <script src="script.js" type="text/javascript" defer></script>
 </body>
 
