--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
   <section class="hero is-small is-light">
     <div id="content" class="content">
-      <div id="titleText" class="column is-1 is-pulled-left">
-        <h3 href="index.html" class="has-text-centered">Data Structures</h3>
+      <div href="index.html" id="titleText" class="column is-1 is-pulled-left">
+        <h3 class="has-text-centered">Data Structures</h3>
       </div>
       <div class="is-pulled-right">
         <nav class="navbar is-transparent is-spaced" role="navigation" aria-label="main navigation">
