--- a/Modules/Arrays/arrays01.html
+++ b/Modules/Arrays/arrays01.html
@@ -13,8 +13,8 @@
 <body>
   <section class="hero is-small is-light">
     <div id="content" class="content">
-      <div id="titleText" class="column is-1 is-pulled-left">
-        <h3 href="../../index.html" class="has-text-centered">Data Structures</h3>
+      <div href="../../index.html" id="titleText" class="column is-1 is-pulled-left">
+        <h3 class="has-text-centered">Data Structures</h3>
       </div>
       <div class="is-pulled-right">
         <nav class="navbar is-transparent is-spaced" role="navigation" aria-label="main navigation">
@@ -30,9 +30,9 @@
             </div>
             <div class="navbar-menu" id="navbarTopMain">
               <div class="navbar-end">
-                <a href="../../../index.html" class="navbar-item is-size-6 has-text-weight-semibold">Modules</a>
-                <a href="../../../aboutus.html" class="navbar-item is-size-6 has-text-weight-semibold">About Us</a>
-                <a href="../../../contactus.html" class="navbar-item is-size-6 has-text-weight-semibold">Contact Us</a>
+                <a href="../../index.html" class="navbar-item is-size-6 has-text-weight-semibold">Modules</a>
+                <a href="../../aboutus.html" class="navbar-item is-size-6 has-text-weight-semibold">About Us</a>
+                <a href="../../contactus.html" class="navbar-item is-size-6 has-text-weight-semibold">Contact Us</a>
               </div>
             </div>
           </div>
@@ -44,8 +44,11 @@
 
 
   <section>
-    <div class="content has-text-centered" style="padding-top: 20px;">
-      <h1>Arrays (1)</h1>
+    <div class="content-body" style="padding-top: 20px;">
+      <div class="has-text-centered">
+        <h1>Arrays (1)</h1>
+      </div>
+
     </div>
   </section>
 
