--- a/modules_format.html
+++ b/modules_format.html
@@ -46,10 +46,11 @@
 
   <!-- This is the body text -->
   <section>
-    <div class="content has-text-centered" style="padding-top:20px; padding-bottom:0;">
-      <h1>TITLE</h1>
+    <div class="content-body" style="padding-top: 20px;">
+      <div class="has-text-centered">
+        <h1 class="is-size-1">Title</h1>
+      </div>
     </div>
-    <p class="has-text-centered">Cool stuff</p>
   </section>
 
 
