--- a/Modules/Arrays/arrays01.html
+++ b/Modules/Arrays/arrays01.html
@@ -46,7 +46,7 @@
   <section>
     <div class="content-body" style="padding-top: 20px;">
       <div class="has-text-centered">
-        <h1>Arrays (1)</h1>
+        <h1 class="is-size-1">Arrays</h1>
       </div>
 
     </div>
