Up Arrow and More

--- a/Modules/Arrays/arrays01.html
+++ b/Modules/Arrays/arrays01.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title>Data Structures Learning</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+  <link rel="stylesheet" type="text/css" href="../../styles.css">
 </head>
 
 <body>
@@ -44,16 +44,25 @@
 
 
   <section>
-    <div class="content-body" style="padding-top: 20px;">
+    <div class="content-body">
       <div class="has-text-centered">
-        <h1 class="is-size-1">Arrays</h1>
+        <h1 class="is-size-1"><strong>Arrays</strong></h1>
+        <h3 class="is-size-6">Arrays Info</h3>
+        <h6 class="is-size-6"></h6>
       </div>
-
     </div>
   </section>
 
+ <section>
+  <div class="bottom">
+    <a onclick = sendToTop() class="bottom-corner up-arrow"></a>
+  </div>
+ </section>
 
-  <script src="script.js" type="text/javascript" defer></script>
+
+
+
+  <script src="../../script.js" type="text/javascript" defer></script>
 </body>
 
 </html>
