--- a/Modules/Queues/queues01.html
+++ b/Modules/Queues/queues01.html
@@ -46,16 +46,16 @@
   <section>
     <div class="content-body">
       <div class="has-text-centered">
-        <h1 class="is-size-1"><strong>Arrays</strong></h1>
-        <h3 class="is-size-6">ArraysInfo</h3>
+        <h1 class="is-size-1"><strong>Queues</strong></h1>
+        <h3 class="is-size-6">Queues Info</h3>
+        <h6 class="is-size-6"></h6>
       </div>
     </div>
   </section>
 
  <section>
   <div class="bottom">
-    <!-- <a onclick = sendToTop() class="up-arrow"></a> -->
-    <button class="bottom-corner">BUTTON</button>
+    <a onclick = sendToTop() class="bottom-corner up-arrow"></a>
   </div>
  </section>
 
