--- a/Modules/ArrayLists/arraylists01.html
+++ b/Modules/ArrayLists/arraylists01.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title>Data Structures Learning</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-  <link rel="stylesheet" type="text/css" href="../../styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
@@ -44,25 +44,18 @@
 
 
   <section>
-    <div class="content-body">
+    <div style="padding-top: 20px;">
       <div class="has-text-centered">
-        <h1 class="is-size-1"><strong>Arrays</strong></h1>
-        <h3 class="is-size-6">ArraysInfo</h3>
+        <h1 class="is-size-1"><strong>ArrayLists</strong></h1>
+        <h3 class="is-size-6">ArryasListsInfo</h3>
       </div>
     </div>
   </section>
 
- <section>
-  <div class="bottom">
-    <!-- <a onclick = sendToTop() class="up-arrow"></a> -->
-    <button class="bottom-corner">BUTTON</button>
-  </div>
- </section>
 
 
 
-
-  <script src="../../script.js" type="text/javascript" defer></script>
+  <script src="script.js" type="text/javascript" defer></script>
 </body>
 
 </html>
