--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>Data Structures Learning</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet/less" type="text/css" href="styles.less" />
+  <!-- <script src="less.js" type="text/javascript"></script> -->
 </head>
 
 <body>
@@ -70,7 +72,7 @@
               <p class="title is-4">Lists</p>
             </div>
           </div>
-          <a href="lists01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
+          <a href="Modules/Lists/lists01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
         </div>
       </div>
 
@@ -86,7 +88,7 @@
               <p class="title is-4">ArrayLists</p>
             </div>
           </div>
-          <a href="arraylists01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
+          <a href="Modules/ArrayLists/arraylists01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
         </div>
       </div>
     </div>
@@ -103,7 +105,7 @@
               <p class="title is-4">Linked Lists</p>
             </div>
           </div>
-          <a href="linkedlists01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
+          <a href="Modules/LinkedLists/linkedlists01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
         </div>
       </div>
 
@@ -119,7 +121,7 @@
               <p class="title is-4">Hashsets</p>
             </div>
           </div>
-          <a href="hashsets01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
+          <a href="Modules/Hashsets/hashsets01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
         </div>
       </div>
 
@@ -135,7 +137,7 @@
               <p class="title is-4">Hashmaps</p>
             </div>
           </div>
-          <a href="hashmaps01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
+          <a href="Modules/Hashmaps/hashmaps01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
         </div>
       </div>
     </div>
@@ -153,7 +155,7 @@
               <p class="title is-4">Queues</p>
             </div>
           </div>
-          <a href="queues01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
+          <a href="Modules/Queues/queues01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
         </div>
       </div>
 
@@ -169,7 +171,7 @@
               <p class="title is-4">Stacks</p>
             </div>
           </div>
-          <a href="stacks01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
+          <a href="Modules/Stacks/stacks01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
         </div>
       </div>
 
@@ -185,13 +187,11 @@
               <p class="title is-4">Trees</p>
             </div>
           </div>
-          <a href="trees01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
+          <a href="Modules/Trees/trees01.html" class="card-footer-item button is-dark is-centered">Go to Module</a>
         </div>
       </div>
     </div>
   </section>
-
-
 
   <script src="script.js" type="text/javascript" defer></script>
 </body>
