Arraylist CSS/JS Fix + Spell Checks

--- a/Modules/ArrayLists/arraylists01.html
+++ b/Modules/ArrayLists/arraylists01.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title>Data Structures Learning</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="../../styles.css">
 </head>
 
 <body>
@@ -52,10 +52,7 @@
     </div>
   </section>
 
-
-
-
-  <script src="script.js" type="text/javascript" defer></script>
+  <script src="../../script.js" type="text/javascript" defer></script>
 </body>
 
 </html>
