--- a/aboutus.html
+++ b/aboutus.html
@@ -6,14 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title>Data Structures Learning</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+  <link rel="stylesheet" type="text/css" href="../../styles.css">
 </head>
 
 <body>
   <section class="hero is-small is-light">
     <div id="content" class="content">
-      <div href="index.html" id="titleText" class="column is-1 is-pulled-left">
+      <div href="../../index.html" id="titleText" class="column is-1 is-pulled-left">
         <h3 class="has-text-centered">Data Structures</h3>
       </div>
       <div class="is-pulled-right">
@@ -30,9 +30,9 @@
             </div>
             <div class="navbar-menu" id="navbarTopMain">
               <div class="navbar-end">
-                <a href="index.html" class="navbar-item is-size-6 has-text-weight-semibold">Modules</a>
-                <a href="aboutus.html" class="navbar-item is-size-6 has-text-weight-semibold">About Us</a>
-                <a href="contactus.html" class="navbar-item is-size-6 has-text-weight-semibold">Contact Us</a>
+                <a href="../../index.html" class="navbar-item is-size-6 has-text-weight-semibold">Modules</a>
+                <a href="../../aboutus.html" class="navbar-item is-size-6 has-text-weight-semibold">About Us</a>
+                <a href="../../contactus.html" class="navbar-item is-size-6 has-text-weight-semibold">Contact Us</a>
               </div>
             </div>
           </div>
@@ -41,62 +41,28 @@
     </div>
   </section>
 
-  <div class="columns is-centered is-variable is-2">
-    <div class="column is-one-third">
-      <div class="card">
-        <div class="card-image">
-          <figure class="image">
-            <img src="Images/Index Images/Arrays.jpg" alt="Placeholder image">
-          </figure>
-        </div>
-        <div class="card-content">
-          <div class="content">
-            <p class="title is-4">Axel Pestoni</p>
-          </div>
-        </div>
-        <a href="https://www.linkedin.com/in/axel-pestoni"
-          class="card-footer-item button is-dark is-centered">Connect</a>
-      </div>
-    </div>
 
-    <div class="column is-one-third">
-      <div class="card">
-        <div class="card-image">
-          <figure class="image">
-            <img src="Images/Profiles/forney.jpg" alt="Placeholder image">
-          </figure>
-        </div>
-        <div class="card-content">
-          <div class="content">
-            <p class="title is-4">Andrew Forney</p>
-          </div>
-        </div>
-        <a href="https://cse.lmu.edu/department/computerscience/faculty/?expert=andrew.forney"
-          class="card-footer-item button is-dark is-centered">Connect</a>
-      </div>
-    </div>
 
-    <div class="column is-one-third">
-      <div class="card">
-        <div class="card-image">
-          <figure class="image">
-            <img src="Images/Profiles/seaver.png" alt="Placeholder image">
-          </figure>
-        </div>
-        <div class="card-content">
-          <div class="content">
-            <p class="title is-4">Seever Faculty</p>
-          </div>
-        </div>
-        <a href="https://cse.lmu.edu/faculty/" class="card-footer-item button is-dark is-centered">Connect</a>
+  <section>
+    <div class="content-body">
+      <div class="has-text-centered">
+        <h1 class="is-size-1"><strong>ArrayLists</strong></h1>
+        <h3 class="is-size-6">ArrayLists Info</h3>
+        <h6 class="is-size-6"></h6>
       </div>
     </div>
+  </section>
+
+ <section>
+  <div class="bottom">
+    <a onclick = sendToTop() class="bottom-corner up-arrow"></a>
   </div>
+ </section>
 
 
 
 
-  <script src="script.js" type="text/javascript" defer></script>
+  <script src="../../script.js" type="text/javascript" defer></script>
 </body>
 
 </html>
