--- a/Modules/LinkedLists/linkedlists01.html
+++ b/Modules/LinkedLists/linkedlists01.html
@@ -53,11 +53,11 @@
     </div>
   </section>
 
- <section>
-  <div class="bottom">
-    <a onclick = sendToTop() class="bottom-corner up-arrow"></a>
-  </div>
- </section>
+  <section>
+    <div class="bottom">
+      <a onclick = sendToTop() class="up-arrow bottom-corner"></a>
+    </div>
+  </section>
 
 
 
