--- a/modules_format.html
+++ b/modules_format.html
@@ -7,13 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title>Data Structures Learning</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-  <link rel="stylesheet" type="text/css" href="../../styles.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
   <section class="hero is-small is-light">
     <div id="content" class="content">
-      <div href="../../index.html" id="titleText" class="column is-1 is-pulled-left">
+      <div href="index.html" id="titleText" class="column is-1 is-pulled-left">
         <h3 class="has-text-centered">Data Structures</h3>
       </div>
       <div class="is-pulled-right">
@@ -30,9 +30,9 @@
             </div>
             <div class="navbar-menu" id="navbarTopMain">
               <div class="navbar-end">
-                <a href="../../index.html" class="navbar-item is-size-6 has-text-weight-semibold">Modules</a>
-                <a href="../../aboutus.html" class="navbar-item is-size-6 has-text-weight-semibold">About Us</a>
-                <a href="../../contactus.html" class="navbar-item is-size-6 has-text-weight-semibold">Contact Us</a>
+                <a href="index.html" class="navbar-item is-size-6 has-text-weight-semibold">Modules</a>
+                <a href="aboutus.html" class="navbar-item is-size-6 has-text-weight-semibold">About Us</a>
+                <a href="contactus.html" class="navbar-item is-size-6 has-text-weight-semibold">Contact Us</a>
               </div>
             </div>
           </div>
@@ -62,7 +62,7 @@
 
 
 
-  <script src="../../script.js" type="text/javascript" defer></script>
+  <script src="script.js" type="text/javascript" defer></script>
 </body>
 
 </html>
