Profiles Updated and Code CleanUp

--- a/contactus.html
+++ b/contactus.html
@@ -47,7 +47,7 @@
       <div class="card">
         <div class="card-image">
           <figure class="image">
-            <img src="Images/Index Images/Arrays.jpg" alt="Placeholder image">
+            <img src="Images/Profiles/axel.jpg" alt="Placeholder image" width="400" height="400">
           </figure>
         </div>
         <div class="card-content">
@@ -63,7 +63,7 @@
       <div class="card">
         <div class="card-image">
           <figure class="image">
-            <img src="Images/Profiles/forney.jpg" alt="Placeholder image">
+            <img src="Images/Profiles/forney.jpg" alt="Placeholder image" width="400" height="400">
           </figure>
         </div>
         <div class="card-content">
@@ -79,7 +79,7 @@
       <div class="card">
         <div class="card-image">
           <figure class="image">
-            <img src="Images/Profiles/seaver.png" alt="Placeholder image">
+            <img src="Images/Profiles/seaver.png" alt="Placeholder image" width="400" height="400">
           </figure>
         </div>
         <div class="card-content">
